# Robotica-2026-2

./: .gitignore  Calculadora.ipynb  README.md  frames_2025-12-01_17.44.47.gv  practica_1.ipynb
install/: local_setup.sh  setup.sh
log/: latest_build
practica_1/: practica_1.ipynb
practica_2/practica_2/: practica2_1.ipynb  practica_2.ipynb
src/rrr_bringup/: package.xml  setup.cfg  setup.py
src/rrr_bringup/launch/: planar_bringup.launch.py  spatial_bringup.launch.py
src/rrr_control/: package.xml  setup.cfg  setup.py
src/rrr_control/rrr_control/: planar_ik.py  spatial_ik.py
src/rrr_description/: package.xml  setup.cfg  setup.py
src/rrr_description/urdf/: rrr_planar.urdf  rrr_robot.urdf  (+1 more)
src/rrr_rviz/: package.xml  setup.cfg  setup.py
workspace/src/click_to_motion/: package.xml  setup.cfg  setup.py
workspace/src/click_to_motion/click_to_motion/: click_listener.py  click_to_motion.py  click_to_motion_node.py  fake_joint_state_pub.py  ik_solver.py  motion_executor.py  planar_click_to_motion.py  plotter.py  spatial_click_to_motion.py  torque_computer.py  trajectory_generator.py  urdf_publisher.py
workspace/src/click_to_motion/click_to_motion/install/: local_setup.sh  setup.sh
workspace/src/click_to_motion/click_to_motion/log/: latest_build
workspace/src/click_to_motion/launch/: click_to_motion.launch.py  click_to_motion_multi.launch.py  two_robots.launch.py  two_robots_final.launch.py
workspace/src/click_to_motion/rviz/: click_to_motion.rviz  two_robots.rviz
workspace/src/click_to_motion/urdf/: robot1_planar.urdf  robot2_spatial.urdf
(+392 files in other folders)
