<?xml version="1.0"?>
<package format="3">
  <name>click_to_motion</name>
  <version>0.0.1</version>
  <description>Click-to-motion ROS2 package (Python nodes)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <!-- dependency on the custom message package -->
  <exec_depend>click_to_motion_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

